--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -5,20 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste de Fundo</title>
     <style>
-        .quadrado{
-            border: 1px solid black;
+        div.quadrado{
+            display: inline-block;
+            border: 2px solid black;
+            border-radius: 10px;
+            background-color: lightslategray;
+            width: 300px;
+            height: 300px;
+        }
 
+        div#q1{
+            background-color: rgb(0, 110, 255);
+        }
+
+        div#q2{
+            background-image: linear-gradient(to bottom, yellow, orange);
+        }
+
+        div#q3{
+            background-image: url(imagens/pattern004.png);
         }
     </style>
 </head>
 <body>
-    <div class="quadrado">
+    <div class="quadrado" id="q1">
 
     </div>
-    <div class="quadrado">
+    <div class="quadrado" id="q2">
 
     </div>
-    <div class="quadrado">
+    <div class="quadrado" id="q3">
 
     </div>
 </body>
