--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,20 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fundo fixo </title>
     <style>
         body{
             height: 100vh;
+
+            /*
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+            */
+
+            /* shorthand - background 
+
+                color > image > position > repeat > {size} > attachment
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid red;
@@ -27,6 +39,12 @@
 <body>
     <main>
         <h1>Teste de fundo de imagem</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi deserunt doloribus tenetur maxime quibusdam facere earum vitae sapiente dolore deleniti fugiat velit, itaque impedit neque nemo, quam iure beatae qui! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia quam, sapiente veritatis, vel error dolores, aliquid at odio quaerat voluptatibus porro! Nobis accusamus quisquam aperiam iste reiciendis nam! Commodi, ipsa?Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, delectus dicta dolores at, excepturi beatae esse suscipit repudiandae, minima reiciendis fuga illo voluptatum maiores molestiae ipsam animi fugit temporibus Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam vel consequatur corrupti perferendis aliquam eos dignissimos. Architecto dicta quos exercitationem quasi sed eligendi repellendus tempore vero? Illo aut quidem facilis!
+        </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi deserunt doloribus tenetur maxime quibusdam facere earum vitae sapiente dolore deleniti fugiat velit, itaque impedit neque nemo, quam iure beatae qui! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia quam, sapiente veritatis, vel error dolores, aliquid at odio quaerat voluptatibus porro! Nobis accusamus quisquam aperiam iste reiciendis nam! Commodi, ipsa?Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, delectus dicta dolores at, excepturi beatae esse suscipit repudiandae, minima reiciendis fuga illo voluptatum maiores molestiae ipsam animi fugit temporibus Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam vel consequatur corrupti perferendis aliquam eos dignissimos. Architecto dicta quos exercitationem quasi sed eligendi repellendus tempore vero? Illo aut quidem facilis!
+        </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi deserunt doloribus tenetur maxime quibusdam facere earum vitae sapiente dolore deleniti fugiat velit, itaque impedit neque nemo, quam iure beatae qui! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia quam, sapiente veritatis, vel error dolores, aliquid at odio quaerat voluptatibus porro! Nobis accusamus quisquam aperiam iste reiciendis nam! Commodi, ipsa?Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, delectus dicta dolores at, excepturi beatae esse suscipit repudiandae, minima reiciendis fuga illo voluptatum maiores molestiae ipsam animi fugit temporibus Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam vel consequatur corrupti perferendis aliquam eos dignissimos. Architecto dicta quos exercitationem quasi sed eligendi repellendus tempore vero? Illo aut quidem facilis!
+        </p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi deserunt doloribus tenetur maxime quibusdam facere earum vitae sapiente dolore deleniti fugiat velit, itaque impedit neque nemo, quam iure beatae qui! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia quam, sapiente veritatis, vel error dolores, aliquid at odio quaerat voluptatibus porro! Nobis accusamus quisquam aperiam iste reiciendis nam! Commodi, ipsa?Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, delectus dicta dolores at, excepturi beatae esse suscipit repudiandae, minima reiciendis fuga illo voluptatum maiores molestiae ipsam animi fugit temporibus Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam vel consequatur corrupti perferendis aliquam eos dignissimos. Architecto dicta quos exercitationem quasi sed eligendi repellendus tempore vero? Illo aut quidem facilis!
         </p>
     </main>
