--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Cordel</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/media-query.css">
 </head>
 <body>
     <header>
@@ -26,7 +27,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img1">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -60,7 +61,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img2">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
