--- a/exercicios/ex023/table001.html
+++ b/exercicios/ex023/table001.html
@@ -11,20 +11,19 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
-        }
-
-        tr.linha {
-            background-color: gray;
         }
 
         td {
             border: 1px solid #000;
             padding: 8px;
+            text-align: center;
+            vertical-align: middle;
         }
 
-        td.dado {
-            background-color: yellow;
+        .numero {
+            text-align: right;
         }
     </style>
 
@@ -34,30 +33,23 @@
     <table>
         <tr> <!--primeira linha-->
             <td>A1</td>
-            <td>B2</td>
-            <td>C3</td>
+            <td>B1</td>
+            <td>C1</td>
         </tr>
-        <tr class="linha">
-            <td>A2</td>
+        <tr>
+            <td class="numero">A2</td>
             <td>B2</td>
             <td>C2</td>
         </tr>
         <tr>
             <td>A3</td>
-            <td class="dado">B3</td>
+            <td>B3</td>
             <td>C3</td>
         </tr>
         <tr>
-            <td>A4</td>
+            <td class="numero">A4</td>
             <td>B4</td>
             <td>C4</td>
-        </tr>
-        <tr>
-            <td>A5</td>
-            <td>B5</td>
-        </tr>
-        <tr>
-            <td>A6</td>
         </tr>
     </table>
 </body>
