--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -17,7 +17,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, quaerat! Ipsam voluptatem voluptatum blanditiis asperiores fugiat omnis itaque quibusdam! Molestiae quam tempore autem sint expedita dolorem esse consectetur ullam ipsa. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim quod, corrupti vero possimus eligendi sequi natus quos non beatae nam numquam fugit magnam quia nisi aspernatur consequuntur delectus laboriosam molestiae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius perspiciatis soluta optio distinctio ipsum ab sit? Delectus, et laboriosam! Eum aliquid assumenda mollitia asperiores nam doloremque laboriosam atque reiciendis quidem.
     </p>
 
-        <iframe src="pagina01.html" frameborder="0" height="500" width="500"></iframe>
+        <iframe src="paginas-extras/pagina01.html" frameborder="0" height="500" width="500"></iframe>
 
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, quaerat! Ipsam voluptatem voluptatum blanditiis asperiores fugiat omnis itaque quibusdam! Molestiae quam tempore autem sint expedita dolorem esse consectetur ullam ipsa. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim quod, corrupti vero possimus eligendi sequi natus quos non beatae nam numquam fugit magnam quia nisi aspernatur consequuntur delectus laboriosam molestiae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius perspiciatis soluta optio distinctio ipsum ab sit? Delectus, et laboriosam! Eum aliquid assumenda mollitia asperiores nam doloremque laboriosam atque reiciendis quidem.
