--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur ratione deserunt sapiente, repudiandae aliquam ullam saepe, laborum excepturi aliquid distinctio dolor fuga error labore ab maiores eos natus, ipsum earum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione facere impedit autem earum consectetur vel voluptatum omnis nemo deserunt ducimus explicabo aspernatur, doloribus at magni dolorum officia voluptas pariatur blanditiis?</p>
     
-    <iframe src="" name="frame">
+    <iframe src="" name="frame" srcdoc="<h1> faça uma escolha acima</h1><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, dignissimos a corporis explicabo nisi provident doloremque vel natus rerum cupiditate ullam commodi, officiis rem odit sint? Architecto temporibus ut unde.</p>">
         <p>Infelizmente seu navageador não é compátivel com isso.</p>
     </iframe>
 
