--- a/desafios/projeto-social/index.html
+++ b/desafios/projeto-social/index.html
@@ -15,12 +15,11 @@
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="assets/imagens/logo-home.jpg" alt="Home"></a><br>
-            <a href="#" target="tela"><img src="assets/imagens/logo-youtube.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="assets/imagens/logo-github.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="assets/imagens/logo-instagram.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="assets/imagens/logo-facebook.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="assets/imagens/logo-twitter.jpg" alt=""></a>
+            <a href="home.html" target="tela"><img src="assets/imagens/logo-home.jpg" alt="Home"></a><br>
+            <a href="youtube.html" target="tela"><img src="assets/imagens/logo-youtube.jpg" alt=""></a><br>
+            <a href="github.html" target="tela"><img src="assets/imagens/logo-github.jpg" alt=""></a><br>
+            <a href="instagram.html" target="tela"><img src="assets/imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="twitter.html" target="tela"><img src="assets/imagens/logo-twitter.jpg" alt=""></a>
         </section>
     </main>
 </body>
