--- a/desafios/projeto-social/index.html
+++ b/desafios/projeto-social/index.html
@@ -6,6 +6,7 @@
     <title>Projeto Social</title>
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/media-queries.css">
 </head>
 <body>
     <main>
@@ -15,10 +16,10 @@
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="home.html" target="tela"><img src="assets/imagens/logo-home.jpg" alt="Home"></a><br>
-            <a href="youtube.html" target="tela"><img src="assets/imagens/logo-youtube.jpg" alt=""></a><br>
-            <a href="github.html" target="tela"><img src="assets/imagens/logo-github.jpg" alt=""></a><br>
-            <a href="instagram.html" target="tela"><img src="assets/imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="home.html" target="tela"><img src="assets/imagens/logo-home.jpg" alt="Home"></a>
+            <a href="youtube.html" target="tela"><img src="assets/imagens/logo-youtube.jpg" alt=""></a>
+            <a href="github.html" target="tela"><img src="assets/imagens/logo-github.jpg" alt=""></a>
+            <a href="instagram.html" target="tela"><img src="assets/imagens/logo-instagram.jpg" alt=""></a>
             <a href="twitter.html" target="tela"><img src="assets/imagens/logo-twitter.jpg" alt=""></a>
         </section>
     </main>
