--- a/desafios/projeto-social/github.html
+++ b/desafios/projeto-social/github.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/social.css">
 </head>
 <body>
-    <img src="assets/imagens/tela-github.jpg" alt="GitHub">
+    <img src="assets/imagens/github.jpg" alt="GitHub">
     <a href="https://github.com/lucashrr" target="_blank">Acesse</a>
 </body>
 </html>
