--- a/desafios/projeto-social/index.html
+++ b/desafios/projeto-social/index.html
@@ -19,7 +19,7 @@
             <a href="home.html" target="tela"><img src="assets/imagens/logo-home.jpg" alt="Home"></a>
             <a href="youtube.html" target="tela"><img src="assets/imagens/logo-youtube.jpg" alt=""></a>
             <a href="github.html" target="tela"><img src="assets/imagens/logo-github.jpg" alt=""></a>
-            <a href="assets/imagens/instragram-l.jpg" target="tela"><img src="assets/imagens/logo-instagram.jpg" alt=""></a>
+            <a href="instagram.html" target="tela"><img src="assets/imagens/logo-instagram.jpg" alt=""></a>
             <a href="twitter.html" target="tela"><img src="assets/imagens/logo-twitter.jpg" alt=""></a>
         </section>
     </main>
