--- a/desafios/projeto-social/instagram.html
+++ b/desafios/projeto-social/instagram.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intagram</title>
     <link rel="stylesheet" href="styles/social.css">
+    <style>
+        img {
+            width: 270px;
+        }
+    </style>
 </head>
 <body>
-    <img src="assets/imagens/tela-instagram.jpg" alt="">
+    <img src="assets/imagens/instragram-l.jpg" alt="">
     <a href="https://www.instagram.com/fw.6.6.6/" target="_blank">acesse</a>
 </body>
 </html>
