--- a/desafios/projeto-social/youtube.html
+++ b/desafios/projeto-social/youtube.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/social.css">
 </head>
 <body>
-    <img src="assets/imagens/tela-youtube.png" alt="YouTube">
+    <img src="assets/imagens/youtube.jpg" alt="YouTube">
     <a href="https://www.youtube.com/@CursoemVideo/playlists" target="_blank">Acesse</a>
 </body>
 </html>
