--- a/exercicios/ex025/form002.html
+++ b/exercicios/ex025/form002.html
@@ -7,16 +7,18 @@
 </head>
 <body>
     <h1>Teste de Formulário</h1>
-    
-    <form action="cadastro1.php" method="get">
+
+    <form action="cadastro.php" method="post" autocomplete="on">
         <p>
-            <label for="iusu">Usuário: </label>
-            <input type="text" name="usu" id="iusu">
+            <label for="iusu">Usuário:</label> 
+            <input type="text" name="usu" id="iusu" required minlength="5" maxlength="15" size="15" placeholder="Nome do Usuário" autocomplete="username">
         </p>
+
         <p>
-            <label for="isen">Senha: </label>
-            <input type="password" name="sen" id="isen">
+            <label for="isen">Senha:</label> 
+            <input type="password" name="sen" id="isen" required minlength="8" size="8" autocomplete="current-password">
         </p>
+
         <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
